fixxed autentikansi
